@@ -1,3 +1,6 @@
+10/07/2012 add support to handl Tcl variables.
+10/07/2012 correct an early return  bug in interpreter::clear_definitions().
+
 This file contains the history of changes in the C++/Tcl library.
 
 ---
